--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Noriega402/electron-movies.git"
+    "url": "git+https://github.com/Noriega402/electron-task.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": ["javascript", "node js", "html", "css", "application desktop", "app"],
+  "author": "Daniel Noriega",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Noriega402/electron-movies/issues"
+    "url": "https://github.com/Noriega402/electron-task/issues"
   },
-  "homepage": "https://github.com/Noriega402/electron-movies#readme",
+  "homepage": "https://github.com/Noriega402/electron-task#readme",
   "dependencies": {
-    "dotenv": "^16.0.3",
+    "dotenv": "16.0.3",
     "electron": "^22.2.0"
   }
 }
